# 4islaki

./: CMakeLists.txt  LU_Decomposition.cpp  Newtom_multiplay.cpp  Newton_solo.cpp  QR_Decomposition.cpp  Zeidel.cpp  main.cpp  run_throw.cpp
Functions_approximation/: CMakeLists.txt  Cubic_Spline.cpp  Derivative.cpp  Integral.cpp  Lagrange_Newton.cpp  MNK.cpp
Koshi/: CMakeLists.txt  ODU_2_order.cpp  ODU_edge_case.cpp
src/: Matrix.cpp  Matrix.h
